Added notebook implementation (via Collab)

--- a/notebook_implementation.ipynb
+++ b/notebook_implementation.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMvDAm7nWC3ymUfyWQ4G3Zi",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13701,8 +13703,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/prathamc25/whisper-speculative-decoding/blob/main/notebook_implementation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -13941,7 +13953,7 @@
       "metadata": {
         "id": "pz9edhlTHNpi"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14272,7 +14284,7 @@
         "id": "OlF8-C_vHUlQ",
         "outputId": "d2ce77db-7cdc-4d17-8004-b79c0c935f79"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14939,7 +14951,7 @@
         "id": "UMvCt0kNHc3i",
         "outputId": "a80fe44c-2e62-4b32-c7f6-4b8046f3708c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
