Formatted the notebook

--- a/notebook_implementation.ipynb
+++ b/notebook_implementation.ipynb
@@ -11,6 +11,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Inital set-up and build dependencies "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -25,6 +32,17 @@
         "!pip install --upgrade --quiet pip\n",
         "!pip install --upgrade --quiet torch transformers accelerate evaluate jiwer\n",
         "!pip install datasets[audio]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1. Setup and Model Definition\n",
+        "This cell imports necessary libraries and defines the `SpeculativeWhisper` class. It handles:\n",
+        "* **Model Loading:** Loads both the Main (Large-V2) and Draft (Tiny/Base/Distil) models.\n",
+        "* **Audio Preprocessing:** Converts audio to log-Mel spectrograms with proper padding (30s).\n",
+        "* **Transcription Logic:** Implements the decoding loop, managing the switch between Standard, Speculative, and Beam Search modes."
       ]
     },
     {
@@ -177,6 +195,18 @@
         "\n",
         "    plt.tight_layout()\n",
         "    plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Benchmark: Speculative Decoding\n",
+        "This experiment compares the **Inference Speed** and **WER (Word Error Rate)** of:\n",
+        "1.  **Baseline:** Standard Greedy Decoding (Large-V2).\n",
+        "2.  **Speculative:** Large-V2 assisted by various draft models (`tiny`, `base`, `distil`).\n",
+        "\n",
+        "It generates a dashboard plotting the **Speedup Factor** and **Efficiency Frontier** to visualize the latency reduction."
       ]
     },
     {
@@ -508,6 +538,16 @@
         "print(\"\\n=== SPECULATIVE RESULTS ===\")\n",
         "print(pd.DataFrame(results_spec)[[\"config\", \"latency\", \"wer\"]])\n",
         "plot_dashboard(results_spec, title_suffix=\"(Speculative)\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Benchmark: Beam Search\n",
+        "This experiment evaluates high-accuracy decoding using **Beam Search (`num_beams=5`)**.\n",
+        "* It compares different model sizes (`tiny`, `base`, `large`) running in pure beam search mode.\n",
+        "* *Note:* Speculative decoding is automatically disabled here as it is mathematically incompatible with standard beam search."
       ]
     },
     {
