Minor changes in notebook

--- a/notebook_implementation_tiny_largev3.ipynb
+++ b/notebook_implementation_tiny_largev3.ipynb
@@ -21,7 +21,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##  Define SpeculativeWhisperV3 Class (Cross-Version Support)\n",
+        "##  SpeculativeWhisperV3 Class (Cross-Version Support)\n",
         "Extended class for cross-version speculative decoding enabling Whisper Large-V3 to work with incompatible draft models: \n",
         "- **Dual Feature Extraction**: Processes audio separately for V3 (128 Mel bins) and draft models (80 Mel bins)\n",
         "- **Token Remapping**: Maps draft model tokens to V3 vocabulary via text-based decoding/encoding\n",
